# mu-haskell-berlin-fp-talk

./: .gitignore  LICENSE  README.md  mu-haskell-berlin-talk.cabal  schema.graphql  stack.yaml
slides/: deck.mdx  layout.js  package.json
src/: Main.hs
